jmxmp+ssl with secure keys gets set up in managed processes where desired (JMX_SSL_ENABLED key), and connections use it.     locks down agent so only brooklyn can connect, but doesn't yet authenticate the jmx agent within brooklyn (so man-in-the-middle would be possible),     and missing a few other nice-to-haves which are noted as TODOs in this check-in (summarised in UsesJmx)